@@ -17,7 +17,7 @@ libglide_la_SOURCES = glide.F90 glide_setup.F90 glide_types.F90 glide_temp.F90 \
                       isostasy.F90 isostasy_el.F90 isostasy_setup.F90 \
                       isostasy_types.F90 glide_lithot.F90 glide_lithot3d.F90 \
                       glide_lithot1d.F90 glide_profile.F90 glimmer_routing.F90 \
-                      glimmer_ncio.F90 glimmer_ncparams.F90
+                      glimmer_ncio.F90 glimmer_ncparams.F90 glide_glenflow.F90
 
 
 test_setup_SOURCES = test_setup.F90
